# multiPose2

./: CMakeLists.txt  README.md  amMRCP_DS copy.tgf  amMRCP_DS.ply  amMRCP_DS_ELE.dmat  amMRCP_DS_NODE.dmat  amMRCP_DS_Wo.dmat  amMRCP_Kinect.tgf  main.cpp  take8.kpts
